--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
       href="/css/main.css"
     />
     <script src="/js/maze.js"></script>
-    <title>Trial</title>
+    <title>maze</title>
   </head>
-
   <body onkeydown="">
     <div class="container"><table id="maze" class="maze"></table></div>
     <button id="start" onclick="start()">start</button>
