Linked css and js files
Created soft-link

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="/css/main.css"
+      href="maze-game/css/main.css"
     />
-    <script src="/js/maze.js"></script>
+    <script src="maze-game/js/maze.js"></script>
     <title>maze</title>
   </head>
   <body onkeydown="">
